openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-collector
  labels:
    app: openshift-collector
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  selector:
    app: openshift-collector
