openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-collector
  labels:
    app: openshift-collector
spec:
  to:
    kind: Service
    name: openshift-collector
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
